# vellum

./: .gitignore  Cargo.toml  NOTICE  README.md  package-lock.json  package.json
.github/releases/: v0.1.0.md
apps/story-tauri/: index.html  package.json
apps/story-tauri/src/: App.tsx  api.ts  storyCopy.test.ts  storyCopy.ts  styles.css  types.ts  userFlow.test.ts  userFlow.ts
apps/story-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/story-tauri/src-tauri/capabilities/: default.json
apps/story-tauri/src-tauri/src/: lib.rs  main.rs
crates/model-adapters/: Cargo.toml
crates/model-adapters/src/: lib.rs
crates/story-harness-core/: Cargo.toml
crates/story-harness-core/src/: lib.rs
crates/story-store/: Cargo.toml
crates/story-store/src/: lib.rs
docs/: README.ja.md  README.ko.md  README.zh-CN.md
scripts/: sign-android-apk.sh
